<resources>
    <string name="app_name">foodcourt</string>
    <string name="title_activity_main">foodcourt</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_search">Search</string>
    <string name="text_lain">Lainnya</string>
    <string name="text_login">Login dan Beli Sesuatu!</string>
    <string name="text_checkout">Pesanan Anda telah kami terima. Pesanan Anda akan segera tiba.</string>
    <string name="text_keranjang">Keranjang</string>
    <string name="text_alamat">Alamat Antar</string>
    <string name="text_ubah">Ubah Alamat</string>
    <string name="text_telepon">Nomor Telepon</string>
    <string name="text_metode">Metode Pembayaran</string>
    <string name="text_cash">Cash</string>
    <string name="text_atm">ATM</string>
    <string name="text_proses">Proses Pesanan</string>
    <string name="text_pesanan">Pesanan</string>
    <string name="text_jasa_antar">Jasa Antar</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="text_total">Total</string>
    <string name="text_cart">Cart</string>
    <string name="label_keranjang">Keranjang</string>
    <string name="frag_cari">fragCari</string>
    <string name="label_frag">frag</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_simpan">Simpan</string>
    <string name="label_edit_alamat">Edit Alamat</string>
    <string name="text_wishlist">Wishlist</string>
    <string name="text_registrasi">Registrasi</string>
    <string name="label_menu">Detail Menu</string>
    <string name="label_daftar_menu">Daftar Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_akun">Akun</string>
    <string name="label_profile">Profile</string>
    <string name="text_pemesanan">Pemesanan</string>
    <string name="label_detail_riwayat">Detail Riwayat</string>
</resources>
