<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.pemesanan.PemesananActivity">
    <include layout="@layout/toolbar_utama"/>
    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="2dp"
                android:text="@string/text_alamat"/>

            <TextView
                android:id="@+id/tvalamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/tvubahalamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/text_ubah"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:padding="3dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_telepon"
                android:textStyle="bold"
                android:padding="2dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:padding="2dp"
                android:inputType="phone"
                android:hint="+62xxxx"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_metode"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="2dp"/>

            <RadioGroup
                android:id="@+id/rgpemesanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/rbcash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cash"/>
                <RadioButton
                    android:id="@+id/rbatm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_atm"/>
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btpemesanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="25dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:paddingRight="25dp"
        android:background="@drawable/bg_button_pemesanan"
        android:layout_gravity="center"
        android:text="@string/text_proses"/>

</LinearLayout>