<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.keranjang.KeranjangActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar_utama"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/text_pesanan"
                    android:textStyle="bold"
                    android:padding="2dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvkeranjang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/tvtambah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_dinner_pink"
                    android:textColor="@color/colorPrimary"
                    android:text="TAMBAH MAKANAN"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_jasa_antar"
                    android:padding="2dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spkeranjang"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"></Spinner>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/text_subtotal"
                        />
                    <TextView
                        android:id="@+id/tvsubtotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_weight="1"
                        android:text="Rp 0"
                        android:gravity="right"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/text_jasa_antar"
                        />
                    <TextView
                        android:id="@+id/tvhargajasa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_weight="1"
                        android:text="Rp 0"
                        android:gravity="right"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:text="@string/text_total"
                        />
                    <TextView
                        android:id="@+id/tvtotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_weight="1"
                        android:text="Rp 0"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btkeranjang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_proses"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/bg_button_pemesanan"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>