<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailRiwayatActivity">
    <include layout="@layout/toolbar_utama"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_deskripsi"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/tvnamaresto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Nama Resto"
                        android:padding="2dp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_weight="1" />
                    <TextView
                        android:id="@+id/tvtanggal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Tanggal"
                        android:padding="2dp"
                        android:gravity="right"
                        android:textColor="@android:color/white"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rating"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"/>

                    <RatingBar
                        android:id="@+id/rbrating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvmenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Detail Pembayaran"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:textColor="@android:color/black"
                                android:text="@string/text_subtotal"
                                />
                            <TextView
                                android:id="@+id/tvsubtotal"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:layout_weight="1"
                                android:text="Rp 0"
                                android:gravity="right"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:textColor="@android:color/black"
                                android:text="@string/text_jasa_antar"
                                />
                            <TextView
                                android:id="@+id/tvhargajasa"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:layout_weight="1"
                                android:text="Rp 0"
                                android:gravity="right"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:textColor="@android:color/black"
                                android:textStyle="bold"
                                android:text="@string/text_total"
                                />
                            <TextView
                                android:id="@+id/tvtotal"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:layout_weight="1"
                                android:text="Rp 0"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:gravity="right"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvbayar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:padding="2dp"
                            android:text="Bayar dengan "/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </ScrollView>





</LinearLayout>